--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <!-- Nav + Carro de compras -->
 <header>
-    <img src="/img/header_tiendaChico.jpg" class="img-fluid" id="header-imagen" alt="img-fluid">
+    <img src="./img/header_tiendaChico.jpg" class="img-fluid" id="header-imagen" alt="img-fluid">
 </header>
 <nav class="navbar navbar-expand-xl navbar-light bg-light pt-3">
     <div class="container-fluid">
@@ -154,7 +154,7 @@
 <div class="row row-cols-1 row-cols-sm-4 pt-5 pb-5 px-5">
     <div class="col d-flex align-items-lg-stretch">
       <div class="card">
-        <img src="/img/producto1_strato.webp" class="card-img-top p-3" alt="card-grid-image">
+        <img src="./img/producto1_strato.webp" class="card-img-top p-3" alt="card-grid-image">
         <div class="card-body d-flex flex-column">
           <h5 class="card-title producto1" id="producto1" >Guitarra Fender Stratocaster Traditional 50s Made In Japan</h5>
           <h4 class="card-title" id="precio1">$1.249.990</h4>
@@ -167,7 +167,7 @@
     </div>
     <div class="col d-flex align-items-lg-stretch">
       <div class="card">
-        <img src="/img/producto2_scarlett2i2.webp" class="card-img-top p-3" alt="card-grid-image">
+        <img src="./img/producto2_scarlett2i2.webp" class="card-img-top p-3" alt="card-grid-image">
         <div class="card-body d-flex flex-column">
           <h5 class="card-title" id="producto2" >Pack de Studio Focusrite Scarlett Solo 3rd Gen</h5>
           <h4 class="card-title" id="precio2">$299.900</h4>
@@ -193,7 +193,7 @@
     </div>
     <div class="col d-flex align-items-lg-stretch">
       <div class="card">
-        <img src="/img/producto4_tubescreamermini.webp" class="card-img-top p-3" alt="card-grid-image">
+        <img src="./img/producto4_tubescreamermini.webp" class="card-img-top p-3" alt="card-grid-image">
         <div class="card-body d-flex flex-column">
           <h5 class="card-title" id="producto4" >Pedal Ibanez TSMINI - Tube Screamer</h5>
           <h4 class="card-title" id="precio4">$59.990</h4>
@@ -224,7 +224,7 @@
     <div class="card">
       <div class="row g-0">
         <div class="col-4 col-sm-4">
-          <img src="/img/producto1_strato.webp" class="img-fluid w-100 p-3" alt="card-horizontal-image">
+          <img src="./img/producto1_strato.webp" class="img-fluid w-100 p-3" alt="card-horizontal-image">
         </div>
         <div class="col-8 col-sm-8">
           <div class="card-body d-flex flex-column">
@@ -275,7 +275,7 @@
             <div class="card">
               <div class="row g-0">
                 <div class="col-4 col-sm-4">
-                  <img src="/img/producto2_scarlett2i2.webp" class="img-fluid w-100 p-3" alt="card-horizontal-image">
+                  <img src="./img/producto2_scarlett2i2.webp" class="img-fluid w-100 p-3" alt="card-horizontal-image">
                 </div>
                 <div class="col-8 col-sm-8">
                   <div class="card-body d-flex flex-column">
@@ -327,7 +327,7 @@
             <div class="card">
               <div class="row g-0">
                 <div class="col-4 col-sm-4">
-                  <img src="/img/producto3_amplivox.webp" class="img-fluid w-100 p-3" alt="card-horizontal-image">
+                  <img src="./img/producto3_amplivox.webp" class="img-fluid w-100 p-3" alt="card-horizontal-image">
                 </div>
                 <div class="col-8 col-sm-8">
                   <div class="card-body d-flex flex-column">
@@ -379,7 +379,7 @@
             <div class="card">
               <div class="row g-0">
                 <div class="col-4 col-sm-4">
-                  <img src="/img/producto4_tubescreamermini.webp" class="img-fluid w-100 p-3" alt="card-horizontal-image">
+                  <img src="./img/producto4_tubescreamermini.webp" class="img-fluid w-100 p-3" alt="card-horizontal-image">
                 </div>
                 <div class="col-8 col-sm-8">
                   <div class="card-body d-flex flex-column">
@@ -422,7 +422,7 @@
     <a class="text-reset fw-bold" href="#">Javier Vargas</a>
   </div>
 </footer>
-<script type="text/javascript" src="/js/app.js"></script>
+<script type="text/javascript" src="./js/app.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
