corrección ruteos img

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     </div>
     <div class="col d-flex align-items-lg-stretch">
       <div class="card">
-        <img src="/img/producto3_amplivox.webp" class="card-img-top p-3" alt="card-grid-image">
+        <img src="./img/producto3_amplivox.webp" class="card-img-top p-3" alt="card-grid-image">
         <div class="card-body d-flex flex-column">
           <h5 class="card-title" id="producto3" >Amplificador de guitarra VOX AC30C2X - 30W</h5>
           <h4 class="card-title" id="precio3">$1.359.900</h4>
